Fix GameCards from clipping on hover

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 h1,
 h2,
 img,
-p {
+p,
+div {
 	caret-color: transparent;
 }
